# openswarm

./: .env.evs.example  .gitignore  .gitleaks.toml  .gitleaksignore  ANALYTICS_INTEGRATION_SIMPLE.md  ANALYTICS_OVERVIEW.md  CLAUDE.md  CLEANUP_AGENT_1.md  CLEANUP_AGENT_2.md  CLEANUP_AGENT_3.md  CLEANUP_AGENT_4.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  OpenSwarm.bat  PHASE7_SQUIRREL_AB.md  README.md  RELEASE_CHECKLIST.md  RELEASE_RUNBOOK.md  SWARM_FILE_FORMAT.md  face.html  package-lock.json  package.json  ports.config.json  publish.sh  push.sh  run.mjs  run.ps1  run.sh  setup.py
backend/: .env.example  .gitignore  CLAUDE.md  OLDmain.py  agent_modes.py  agent_orchestrator.py  agent_tools.py  app_framework.py  auth.py  built_in_main.py  builtin_http_client.py  builtin_models.py  builtin_server.py  cli.py  github_integration.py  key-probe.js  main.py  performance.c  ports.py  pyproject.toml  requirements-dev.txt  requirements.txt  routing.py  run.mjs  run.sh  watch-moves.sh
backend/apps/: nine_router.py  oauth_state.py
backend/common/: secret_scan.py
backend/config/: Apps.py  install_id.py  json_store.py  paths.py
backend/mcp-bundles/: reddit-mcp-buddy.js
backend/providers/: base.py
backend/run/: _utils.sh  dev.sh
backend/scripts/: benchmark_first_turn_payload.py
backend/tests/: conftest.py  run.sh  test_1m_context_and_effort.py  test_accept_all_midrun.py  test_agent_create_app.py  test_agent_loop.py  test_agent_manager_unit.py  test_agent_session_list.py  test_agents_lifespan_integration.py  test_analytics.py  test_analytics_agent_bridge.py  test_anthropic_proxy.py  (+140 more)
(+1817 files in other folders)
